--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,9 @@
   "type": "library",
   "require": {
     "php": ">=5.6"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "5.7.*",
+    "phpunit/php-invoker": "1.1.3"
   }
 }
