--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "url": "https://github.com/easydigitaldownloads/edd-sl-sdk/issues"
   },
   "devDependencies": {
-    "@wordpress/scripts": "^26.2.0",
-    "mini-css-extract-plugin": "^2.7.6",
+    "@wordpress/scripts": "^30.21.0",
+    "mini-css-extract-plugin": "^2.9.4",
     "path": "^0.12.7",
     "webpack-fix-style-only-entries": "^0.6.1"
   },
   "scripts": {
     "build": "wp-scripts build",
-    "dev": "wp-scripts start"
+    "dev": "wp-scripts start",
+		"translate": "wp i18n make-pot . languages/edd-sl-sdk.pot --domain=edd-sl-sdk"
   }
 }
